--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <title>TailwindCSS</title>
 </head>
 <body>
-<header class="px-2 border-b">
+<header class="px-2 border-b flex items-center justify-between">
     <a class="uppercase font-bold text-purple-800" href="#">TailwindCSS</a>
-    <nav>
-        <ul class="text-gray-500 font-semibold">
-            <li><a href="#" class="inline-block py-3 px-2 border-b-2 border-transparent hover:text-purple-800 hover:border-purple-800 focus:outline-none focus:ring focus:ring-purple-500">Home</a></li>
-            <li><a href="#" class="inline-block py-3 px-2 border-b-2 border-transparent hover:text-purple-800 hover:border-purple-800 focus:outline-none focus:ring focus:ring-purple-500">About</a></li>
-            <li><a href="#" class="inline-block py-3 px-2 border-b-2 border-transparent hover:text-purple-800 hover:border-purple-800 focus:outline-none focus:ring focus:ring-purple-500">Contact</a></li>
+    <nav class="flex items-center">
+        <ul class=" inline-flex items-center">
+            <li><a href="#" class="header-link">Home</a></li>
+            <li><a href="#" class="header-link">About</a></li>
+            <li><a href="#" class="header-link">Contact</a></li>
         </ul>
-        <ul>
-            <li><button class="py-1 px-3 border-2 rounded-full border-indigo-600 text-indigo-600 hover:text-white hover:bg-indigo-800 focus:outline-none focus:ring focus:ring-violet-300">Login</button></li>
-            <li><button class="py-1 px-3 border-2 rounded-full border-indigo-600 text-indigo-600 hover:text-white hover:bg-indigo-800 focus:outline-none focus:ring focus:ring-violet-300">Register</button></li>
+        <ul class="inline-flex items-center">
+            <li><button class="header-btn">Login</button></li>
+            <li><button class="header-btn">Register</button></li>
         </ul>
     </nav>
 </header>
 <main>
     <!-- Breadcrumds -->
 <section>
-    <ul class="py-4 overflow-y-auto whitespace-nowrap">
+    <ul class="py-4 flex overflow-y-auto whitespace-nowrap">
         <li><a href="#" class="text-gray-600 hover:text-gray-900">Home</a>
             <span class="mx-2 text-gray-500 ">&gt</span>
             <a href="#" class="text-gray-600 hover:text-gray-900">News</a>
@@ -35,16 +35,45 @@
         </li>
     </ul>
 </section>
+<section class="py-2 ">
+    <a href="#" class="block mb-10">
+        <ul class="flex">
+            <li>
+                <h3 class="mt-3 mb-2 text-gray-700 font-bold text-2xl">Title1</h3>
+                <p class="text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea iure aut perspiciatis id earum pariatur corporis voluptas a consequatur harum ab, blanditiis quo porro nostrum temporibus illum debitis natus eligendi.
+                </p>
+            </li>
+        </ul>
+    </a>
+    <a href="#" class="block mb-10">
+        <ul class="flex">
+            <li>
+                <h3 class="mt-3 mb-2 text-gray-700 font-bold text-2xl">Title2</h3>
+                <p class="text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea iure aut perspiciatis id earum pariatur corporis voluptas a consequatur harum ab, blanditiis quo porro nostrum temporibus illum debitis natus eligendi.
+                </p>
+            </li>
+        </ul>
+    </a>
+    <a href="#" class="block mb-10">
+        <ul class="flex">
+            <li>
+                <h3 class="mt-3 mb-2 text-gray-700 font-bold text-2xl">Title3</h3>
+                <p class="text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quam quos provident quo officia praesentium, a ratione accusantium, numquam esse necessitatibus ex? Vero deserunt nulla neque in vel distinctio voluptate!
+                </p>
+            </li>
+        </ul>
+    </a>
+</section>
 <!-- pagination -->
 <section class="mt-20 mb-10">
     <ul class="flex justify-center">
-        <li><a href="#" class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover: bg-gray-100 hover:text-gray-700 rounded-l-lg">Previous</a></li>
-        <li><a href="#" class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover: bg-gray-100 hover:text-gray-700">1</a></li>
-        <li><a href="#" class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover: bg-gray-100 hover:text-gray-700">2</a></li>
-        <li><a href="#" class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover: bg-gray-100 hover:text-gray-700">3</a></li>
-        <li><a href="#" class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover: bg-gray-100 hover:text-gray-700">3</a></li>
-        <li><a href="#" class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover: bg-gray-100 hover:text-gray-700">4</a></li>
-        <li><a href="#" class="inline-block py-1 px-3 border border-gray-300 text-gray-500 hover: bg-gray-100 hover:text-gray-700 rounded-r-lg">Next</a></li>
+        <li><a href="#" class="pagination-item rounded-l-lg">Previous</a></li>
+        <li><a href="#" class="pagination-item">1</a></li>
+        <li><a href="#" class="pagination-item">2</a></li>
+        <li><a href="#" class="pagination-item">3</a></li>
+        <li><a href="#" class="pagination-item">3</a></li>
+        <li><a href="#" class="pagination-item">4</a></li>
+        <li><a href="#" class="pagination-item rounded-r-lg">Next</a></li>
     </ul>
 </section>
 <section class="border border-dotted">
@@ -61,16 +90,16 @@
         <div>
             <h6 class="font-semibold text-gray-700 mb-4">Company</h6>
             <ul>
-                <li><a href="#" class="inline-block text-gray-500 py-2 hover:underline ">Team</a></li>
-                <li><a href="#" class="inline-block text-gray-500 py-2 hover:underline">About Us</a></li>
+                <li><a href="#" class="footer-link ">Team</a></li>
+                <li><a href="#" class="footer-link">About Us</a></li>
             </ul>
         </div>
         <div>
             <h6 class="font-semibold text-gray-700 mb-4">Content</h6>
             <ul>
-                <li><a href="#" class="inline-block text-gray-500 py-2 hover:underline decoration-gray-700 underline-offset-2">Work</a></li>
-                <li><a href="#" class="inline-block text-gray-500 py-2 hover:underline decoration-gray-700 underline-offset-2">Policy</a></li>
-                <li><a href="#" class="inline-block text-gray-500 py-2 hover:underline decoration-gray-700 underline-offset-2 ">Documentation</a></li>
+                <li><a href="#" class="footer-link">Work</a></li>
+                <li><a href="#" class="footer-link">Policy</a></li>
+                <li><a href="#" class="footer-link ">Documentation</a></li>
             </ul>
         </div>
     </section>
