--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <li><a href="#" class="header-link">Contact</a></li>
               </ul>
               <ul class="inline-flex items-center">
-                <li><button class="header-btn">Login</button></li>
-                <li><button class="header-btn">Register</button></li>
+                <li><button class="header-btn ">Login</button></li>
+                <li><button class="header-btn ">Register</button></li>
               </ul>
             </nav>
             <button class="block sm:hidden">
@@ -31,14 +31,34 @@
           </header>
           <section class="px-2 lg:flex lg:space-x-2">
             <a href="#" class="w-full lg:w-2/3 bg-violet-300 h-96 mb-4 relative rounded inline-block overflow-hidden">
+              <div class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-black/30 to-black/90"></div>
+              <img src="./src/images/photo1-news.jpg" alt="News one" class="absolute left-0 top-0 w-full h-full object-cover z-0">
                 <div class="p-4 absolute  bottom-0 left-0 z-20">
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight"> Lorem ipsum dolor sit amet consectetur adipisicing elit. In esse, temporibus officia tenetur et quas similique</h2>
-                </div>
+                    <div class="flex mt-3">
+                      <img class="h-10 w-10 rounded-full mr-2 object-cover " src="https://randomuser.me/api/portraits/men/61.jpg" alt="author">
+                        <div>
+                          <p class="font-semibold text-gray-200 text-sm">Endru Price</p>
+                          <time class="text-gray-400 text-xs" >09 March</time>
+                        </div>
+                      </img>
+                    </div>
+                  </div>
             </a>
             <a href="#" class="w-full lg:w-1/3 bg-indigo-300 h-96 mb-4 relative rounded inline-block overflow-hidden ">
+              <div class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-black/30 to-black/90"></div>
+              <img src="./src/images/photo2-news.jpg" alt="News one" class="absolute left-0 top-0 w-full h-full object-cover z-0">
                 <div class="p-4 absolute  bottom-0 left-0 z-20">
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight"> Lorem ipsum dolor sit amet consectetur adipisicing elit. In esse, temporibus officia tenetur et quas similique</h2>
+                <div class="flex mt-3">
+                  <img class="h-10 w-10 rounded-full mr-2 object-cover " src="https://randomuser.me/api/portraits/women/66.jpg" alt="author">
+                    <div>
+                      <p class="font-semibold text-gray-200 text-sm">Elena Price</p>
+                      <time class="text-gray-400 text-xs" >09 March</time>
+                    </div>
+                  </img>
                 </div>
+                  </div>
             </a>
           </section>
           <main class="lg:flex">
@@ -117,11 +137,12 @@
                   </li>
                 </ul>
               </section>
-              <section class="px-2 md:flex">
-                <a href="#" class="w-full block mb-10 md:w-1/5">
+              <section class="px-2">
+                <a href="#" class="w-full block sm:flex mb-10">
+                  <img src="./src/images/vue.png" alt="News Vue" class="w-full h-48 sm:w-48 opacity-80 object-cover sm:mr-4">
                   <ul class="flex">
                     <li>
-                      <h3 class="mt-3 mb-2 text-gray-700 font-bold text-2xl">
+                      <h3 class=" mb-2 text-gray-700 font-bold text-2xl">
                         Title1
                       </h3>
                       <p class="text-gray-700">
@@ -133,10 +154,11 @@
                     </li>
                   </ul>
                 </a>
-                <a href="#" class="w-full block mb-10 md:w-3/5">
+                <a href="#" class="w-full block sm:flex mb-10">
+                  <img src="./src/images/photo3.webp" alt="News Vue" class="w-full h-48 sm:w-48 opacity-80 object-cover sm:mr-4">
                   <ul class="flex">
                     <li>
-                      <h3 class="mt-3 mb-2 text-gray-700 font-bold text-2xl">
+                      <h3 class=" mb-2 text-gray-700 font-bold text-2xl">
                         Title2
                       </h3>
                       <p class="text-gray-700">
@@ -148,10 +170,11 @@
                     </li>
                   </ul>
                 </a>
-                <a href="#" class="w-full block mb-10 md:w-1/5">
+                <a href="#" class="w-full block sm:flex mb-10">
+                  <img src="./src/images/angular.jpg" alt="News Vue" class="w-full h-48 sm:w-48 opacity-80 object-cover sm:mr-4">
                   <ul class="flex">
                     <li>
-                      <h3 class="mt-3 mb-2 text-gray-700 font-bold text-2xl">
+                      <h3 class=" mb-2 text-gray-700 font-bold text-2xl">
                         Title3
                       </h3>
                       <p class="text-gray-700">
@@ -264,7 +287,7 @@
                         viewBox="0 0 24 24"
                         stroke-width="1.5"
                         stroke="currentColor"
-                        class="w-5 h-5 hover:fill-gray-700"
+                        class="w-5 h-5 hover:fill-gray-700 "
                       >
                         <path
                           stroke-linecap="round"
