--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>TailwindCSS</title>
   </head>
   <body>
-    <div class="max-w-screen-xl mx-auto">
+    <div class="max-w-screen-xl mx-auto h-screen grid grid-rows-[auto_1fr_auto]">
         <header class="px-2 border-b flex items-center justify-between h-14">
             <a class="uppercase font-bold text-purple-800" href="#">TailwindCSS</a>
             <nav class="hidden sm:flex items-center ">
@@ -29,201 +29,7 @@
                   
             </button>
           </header>
-          <section class="px-2 lg:flex lg:space-x-2">
-            <a href="#" class="w-full lg:w-2/3 bg-violet-300 h-96 mb-4 relative rounded inline-block overflow-hidden">
-              <div class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-black/30 to-black/90"></div>
-              <img src="./src/images/photo1-news.jpg" alt="News one" class="absolute left-0 top-0 w-full h-full object-cover z-0">
-                <div class="p-4 absolute  bottom-0 left-0 z-20">
-                    <h2 class="text-4xl font-semibold text-gray-100 leading-tight"> Lorem ipsum dolor sit amet consectetur adipisicing elit. In esse, temporibus officia tenetur et quas similique</h2>
-                    <div class="flex mt-3">
-                      <img class="h-10 w-10 rounded-full mr-2 object-cover " src="https://randomuser.me/api/portraits/men/61.jpg" alt="author">
-                        <div>
-                          <p class="font-semibold text-gray-200 text-sm">Endru Price</p>
-                          <time class="text-gray-400 text-xs" >09 March</time>
-                        </div>
-                      </img>
-                    </div>
-                  </div>
-            </a>
-            <a href="#" class="w-full lg:w-1/3 bg-indigo-300 h-96 mb-4 relative rounded inline-block overflow-hidden ">
-              <div class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-black/30 to-black/90"></div>
-              <img src="./src/images/photo2-news.jpg" alt="News one" class="absolute left-0 top-0 w-full h-full object-cover z-0">
-                <div class="p-4 absolute  bottom-0 left-0 z-20">
-                    <h2 class="text-4xl font-semibold text-gray-100 leading-tight"> Lorem ipsum dolor sit amet consectetur adipisicing elit. In esse, temporibus officia tenetur et quas similique</h2>
-                <div class="flex mt-3">
-                  <img class="h-10 w-10 rounded-full mr-2 object-cover " src="https://randomuser.me/api/portraits/women/66.jpg" alt="author">
-                    <div>
-                      <p class="font-semibold text-gray-200 text-sm">Elena Price</p>
-                      <time class="text-gray-400 text-xs" >09 March</time>
-                    </div>
-                  </img>
-                </div>
-                  </div>
-            </a>
-          </section>
-          <main class="lg:flex">
-            <!-- Breadcrumds -->
-            <div class="w-full lg:w-2/3">
-              <section>
-                <ul class="px-2 flex items-center">
-                  <li
-                    class="py-4 overflow-y-auto whitespace-nowrap flex items-center"
-                  >
-                    <a href="#" class="text-gray-600 hover:text-gray-900">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke-width="1.5"
-                        stroke="currentColor"
-                        class="w-6 h-6"
-                      >
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
-                        /></svg>
-                      </a>
-                    <span class="mx-2 text-gray-500"
-                      ><svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke-width="1.5"
-                        stroke="currentColor"
-                        class="w-6 h-6"
-                      >
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          d="M8.25 4.5l7.5 7.5-7.5 7.5"
-                        />
-                      </svg>
-                    </span>
-                    <a href="#" class="text-gray-600 hover:text-gray-900">News</a>
-                    <span class="mx-2 text-gray-500"
-                      ><svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke-width="1.5"
-                        stroke="currentColor"
-                        class="w-6 h-6"
-                      >
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          d="M8.25 4.5l7.5 7.5-7.5 7.5"
-                        />
-                      </svg>
-                    </span>
-                    <a href="#" class="text-gray-600 hover:text-gray-900">Tech</a>
-                    <span class="mx-2 text-gray-500"
-                      ><svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke-width="1.5"
-                        stroke="currentColor"
-                        class="w-6 h-6"
-                      >
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          d="M8.25 4.5l7.5 7.5-7.5 7.5"
-                        />
-                      </svg>
-                    </span>
-                  </li>
-                </ul>
-              </section>
-              <section class="px-2">
-                <a href="#" class="w-full block sm:flex mb-10">
-                  <img src="./src/images/vue.png" alt="News Vue" class="w-full h-48 sm:w-48 opacity-80 object-cover sm:mr-4">
-                  <ul class="flex">
-                    <li>
-                      <h3 class=" mb-2 text-gray-700 font-bold text-2xl">
-                        Title1
-                      </h3>
-                      <p class="text-gray-700">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-                        iure aut perspiciatis id earum pariatur corporis voluptas a
-                        consequatur harum ab, blanditiis quo porro nostrum temporibus
-                        illum debitis natus eligendi.
-                      </p>
-                    </li>
-                  </ul>
-                </a>
-                <a href="#" class="w-full block sm:flex mb-10">
-                  <img src="./src/images/photo3.webp" alt="News Vue" class="w-full h-48 sm:w-48 opacity-80 object-cover sm:mr-4">
-                  <ul class="flex">
-                    <li>
-                      <h3 class=" mb-2 text-gray-700 font-bold text-2xl">
-                        Title2
-                      </h3>
-                      <p class="text-gray-700">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-                        iure aut perspiciatis id earum pariatur corporis voluptas a
-                        consequatur harum ab, blanditiis quo porro nostrum temporibus
-                        illum debitis natus eligendi.
-                      </p>
-                    </li>
-                  </ul>
-                </a>
-                <a href="#" class="w-full block sm:flex mb-10">
-                  <img src="./src/images/angular.jpg" alt="News Vue" class="w-full h-48 sm:w-48 opacity-80 object-cover sm:mr-4">
-                  <ul class="flex">
-                    <li>
-                      <h3 class=" mb-2 text-gray-700 font-bold text-2xl">
-                        Title3
-                      </h3>
-                      <p class="text-gray-700">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Cumque quam quos provident quo officia praesentium, a ratione
-                        accusantium, numquam esse necessitatibus ex? Vero deserunt
-                        nulla neque in vel distinctio voluptate!
-                      </p>
-                    </li>
-                  </ul>
-                </a>
-              </section>
-              <!-- pagination -->
-              <section class="mt-20 mb-10">
-                <ul class="flex justify-center">
-                  <li>
-                    <a href="#" class="pagination-item rounded-l-lg">Previous</a>
-                  </li>
-                  <li><a href="#" class="pagination-item">1</a></li>
-                  <li><a href="#" class="pagination-item">2</a></li>
-                  <li><a href="#" class="pagination-item">3</a></li>
-                  <li><a href="#" class="pagination-item">3</a></li>
-                  <li><a href="#" class="pagination-item">4</a></li>
-                  <li><a href="#" class="pagination-item rounded-r-lg">Next</a></li>
-                </ul>
-              </section>
-            </div>
-      
-            <section class=" w-full border border-dotted lg:w-1/3 px-2">
-              <form action="" class="my-5">
-                <h5 class="font-bold text-lg uppercase text-gray-700 mb-2">
-                  Subscribe
-                </h5>
-                <p class="text-gray-600 mb-4">Subscribe to our newsletter.</p>
-                <input
-                  type="email"
-                  name="email"
-                  placeholder="your email addres"
-                  class="text-gray-700 bg-gray-100 p-2 w-full border rounded-t hover:border-gray-500"
-                />
-                <button
-                  type="submit"
-                  class="px-4 py-2 w-full bg-indigo-600 text-white rounded-b hover:bg-indigo-800"
-                >
-                  Subscribe
-                </button>
-              </form>
-            </section>
-          </main>
+
           <footer class="border-t mt-10 py-10 px-2">
             <section class="md:flex">
               <div class="w-full mb-5 md:w-2/5">
